--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,22 +6,30 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/coursesapp"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".ui.SplashScreen"
+            android:label="@string/app_name"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".fragments0.ListContentFragment" />
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".fragments0.TileContentFragment" />
         <activity android:name=".fragments.ListCourseFragments" />
-        <activity android:name=".ui.ContentCourse"></activity>
+        <activity android:name=".ui.ContentCourse" />
+        <activity
+            android:name=".ui.CourseDetail"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".fragments.ListTenseFragment" />
+
     </application>
 
 </manifest>
