--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,23 +5,24 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".chat.FirebaseChatMainApp"
         android:allowBackup="true"
-        android:icon="@drawable/coursesapp"
+        android:icon="@drawable/ic_messaging"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.SplashScreen"
+            android:name=".chat.ui.activities.SplashActivity"
             android:label="@string/app_name"
-            android:noHistory="true">
+            android:theme="@style/AppTheme.NoActionBar.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".fragments0.TileContentFragment" />
         <activity android:name=".fragments.ListCourseFragments" />
         <activity android:name=".ui.ContentCourse" />
@@ -29,7 +30,40 @@
             android:name=".ui.CourseDetail"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".fragments.ListTenseFragment" />
+        //chat package
+        <activity
+            android:name=".chat.ui.activities.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".chat.ui.activities.RegisterActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".chat.ui.activities.UserListingActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".chat.ui.activities.ChatActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
 
+        <service
+            android:name=".chat.fcm.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".chat.fcm.MyFirebaseInstanceIDService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".ui.TenseDetail"></activity>
     </application>
 
 </manifest>
