--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,8 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ui.TenseDetail"></activity>
+        <activity android:name=".ui.TenseDetail" />
+        <activity android:name=".ui.Formula"></activity>
     </application>
 
 </manifest>
