--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:name=".chat.FirebaseChatMainApp"
         android:allowBackup="true"
-        android:icon="@drawable/ic_messaging"
+        android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -23,7 +23,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".fragments0.TileContentFragment" />
         <activity android:name=".fragments.ListCourseFragments" />
         <activity android:name=".ui.ContentCourse" />
         <activity
@@ -33,15 +32,13 @@
         //chat package
         <activity
             android:name=".chat.ui.activities.LoginActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".chat.ui.activities.RegisterActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".chat.ui.activities.UserListingActivity"
-            android:label="@string/app_name"
+            android:label="@string/user"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".chat.ui.activities.ChatActivity"
@@ -64,7 +61,12 @@
         </service>
 
         <activity android:name=".ui.TenseDetail" />
-        <activity android:name=".ui.Formula"></activity>
+        <activity
+            android:name=".ui.Formula"
+            android:label="@string/formula"/>
+        <activity
+            android:name=".ui.Example"
+            android:label="@string/example"/>
     </application>
 
 </manifest>
